# cf_maker

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.cpp  mashadot.mcDst.root
config/: kt.json
images/: copy_p_value_and_graphs.zsh  description.md
include/: cf3d.h  config.h  context.h  draw.h  fit.h  helpers.h  plots.h  proj1d.h  proj2d.h  ratios.h
include/analysis/: context.h  register.h  registry.h  runner.h  stage.h
include/fit/: badfit.h  cache.h  fit.h  initial_parameters.h  json.h  result.h  types.h
include/helpers/: constants.h  root_utils.h  utils.h
rotate/: rotate.cpp
src/: cf3d.cpp  config.cpp  context.cpp  draw.cpp  fit.cpp  helpers.cpp  plots.cpp  proj1d.cpp  proj2d.cpp  ratios.cpp
src/analysis/: registry.cpp  runner.cpp
src/fit/: badfit.cpp  cache.cpp  fit.cpp  fitres.cpp  initial_parameters.cpp  json.cpp  result.cpp
src/helpers/: root_utils.cpp  utils.cpp
src/plots/: 1d_projection.cpp  2d_projection.cpp  Kt.cpp  Rapidity.cpp  bad_fit.cpp  cf3d.cpp  cf_3d.cpp  cf_ratio.cpp  dep.cpp  dependency.cpp  kt_dependence.cpp  plots_helpers.cpp  rapidity_dependence.cpp  result_chi2ndf.cpp  result_fit_over_cf.cpp
tex/: main.tex
tex/presentation/: presentation.tex
tex/report/: delete.sh  main.tex  references.bib
